[gd_scene load_steps=6 format=3 uid="uid://cumvmtqhllb3a"]

[ext_resource type="Script" path="res://Scripts/canvas_layer.gd" id="1_66uvp"]
[ext_resource type="Theme" uid="uid://g5dcmi2kejgv" path="res://Assets/Themes/TestTheme.tres" id="1_dx4aw"]
[ext_resource type="PackedScene" uid="uid://ntar0ljurf53" path="res://Scenes/BackgroundBio.tscn" id="3_fdyj2"]
[ext_resource type="Texture2D" uid="uid://clso65kma06g7" path="res://icon.svg" id="4_stxx7"]
[ext_resource type="PackedScene" uid="uid://dovpmp4f4ubog" path="res://Scenes/animated_button.tscn" id="6_b1wdv"]

[node name="Menu" type="Control"]
visibility_layer = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dx4aw")
script = ExtResource("1_66uvp")

[node name="Background" parent="." instance=ExtResource("3_fdyj2")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
visibility_layer = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visibility_layer = 3
layout_mode = 2
theme_override_constants/separation = 20

[node name="LineEdit" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[wave amp=50.0 freq=3.0 connected=1][center]Select a Savefile[/center][/wave]"
custom_effects = [null]

[node name="NewFile" parent="MarginContainer/VBoxContainer" instance=ExtResource("6_b1wdv")]
visibility_layer = 3
layout_mode = 2
size_flags_vertical = 3
label_name = "File 1"

[node name="LoadFile" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveInformation" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadFile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_stxx7")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 30
text = "Wizard 4"

[node name="AdventureName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ERD"

[node name="CharacterName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Character Name"

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2"]
modulate = Color(1, 0.0784314, 0.00392157, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "X"

[node name="NewFile2" parent="MarginContainer/VBoxContainer" instance=ExtResource("6_b1wdv")]
visibility_layer = 2
layout_mode = 2
size_flags_vertical = 3
label_name = "File 2"

[node name="LoadFile2" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveInformation" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadFile2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_stxx7")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 30
text = "Wizard 4"

[node name="AdventureName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ERD"

[node name="CharacterName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Character Name"

[node name="Delete2" type="Button" parent="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2"]
modulate = Color(1, 0.0784314, 0.00392157, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "X"

[node name="NewFile3" parent="MarginContainer/VBoxContainer" instance=ExtResource("6_b1wdv")]
layout_mode = 2
size_flags_vertical = 3
label_name = "File 3"

[node name="LoadFile3" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SaveInformation" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadFile3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_stxx7")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 30
text = "Wizard 4"

[node name="AdventureName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ERD"

[node name="CharacterName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Character Name"

[node name="Delete3" type="Button" parent="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2"]
modulate = Color(1, 0.0784314, 0.00392157, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "X"

[node name="NewFile4" parent="MarginContainer/VBoxContainer" instance=ExtResource("6_b1wdv")]
layout_mode = 2
size_flags_vertical = 3
label_name = "File 4"

[node name="LoadFile4" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SaveInformation" type="MarginContainer" parent="MarginContainer/VBoxContainer/LoadFile4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_stxx7")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 30
text = "Wizard 4"

[node name="AdventureName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ERD"

[node name="CharacterName" type="Label" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Character Name"

[node name="Delete4" type="Button" parent="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2"]
modulate = Color(1, 0.0784314, 0.00392157, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
text = "X"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewFile" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile" to="." method="_on_load_file_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile/SaveInformation/HBoxContainer2/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewFile2" to="." method="_on_new_file_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile2" to="." method="_on_load_file_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile2/SaveInformation/HBoxContainer2/Delete2" to="." method="_on_delete_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewFile3" to="." method="_on_new_file_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile3" to="." method="_on_load_file_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile3/SaveInformation/HBoxContainer2/Delete3" to="." method="_on_delete_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewFile4" to="." method="_on_new_file_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile4" to="." method="_on_load_file_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadFile4/SaveInformation/HBoxContainer2/Delete4" to="." method="_on_delete_4_pressed"]

[editable path="MarginContainer/VBoxContainer/NewFile"]
